trunk/Archive2/59/85523219b3aa3c/output
main.cpp: In function 'void PrintInt(int)':
main.cpp:277:5: error: 'cout' is not a member of 'std'
     std::cout << a << ", ";
     ^
main.cpp: In function 'int main(int, char**)':
main.cpp:292:2: error: 'cout' is not a member of 'std'
  std::cout << " \nPocet prvku: " << list->PocetPrvku() << std::endl;
  ^
main.cpp:292:59: error: 'endl' is not a member of 'std'
  std::cout << " \nPocet prvku: " << list->PocetPrvku() << std::endl;
                                                           ^
main.cpp:297:2: error: 'cout' is not a member of 'std'
  std::cout << "\nPocet prvku: " << list->PocetPrvku() << std::endl;
  ^
main.cpp:297:58: error: 'endl' is not a member of 'std'
  std::cout << "\nPocet prvku: " << list->PocetPrvku() << std::endl;
                                                          ^
main.cpp:298:2: error: 'cout' is not a member of 'std'
  std::cout << "Odebiram: " << list->OdeberPrvni() << std::endl;
  ^
main.cpp:298:54: error: 'endl' is not a member of 'std'
  std::cout << "Odebiram: " << list->OdeberPrvni() << std::endl;
                                                      ^
main.cpp:300:2: error: 'cout' is not a member of 'std'
  std::cout << "\nPocet prvku: " << list->PocetPrvku() << std::endl;
  ^
main.cpp:300:58: error: 'endl' is not a member of 'std'
  std::cout << "\nPocet prvku: " << list->PocetPrvku() << std::endl;
                                                          ^
main.cpp:302:2: error: 'cout' is not a member of 'std'
  std::cout << "Aktualni: " << list->ZpristupniAktualni();
  ^
main.cpp:303:2: error: 'cout' is not a member of 'std'
  std::cout << std::endl;
  ^
main.cpp:303:15: error: 'endl' is not a member of 'std'
  std::cout << std::endl;
               ^
main.cpp:307:3: error: 'cout' is not a member of 'std'
   std::cout << *it << std::endl;
   ^
main.cpp:307:23: error: 'endl' is not a member of 'std'
   std::cout << *it << std::endl;
                       ^
